--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,44 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Dependências do Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build e cache
+dist/
+build/
+.cache/
+.tmp/
+
+# Logs
+logs/
+*.log
+*.out
+*.err
+
+# Variáveis de ambiente (NUNCA subir no GitHub!)
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Banco de dados local 
+*.sqlite
+*.db
+*.sqlite3
+
+# Arquivos do sistema
+.DS_Store
+Thumbs.db
+
+# Configurações de IDEs
+.vscode/
+.idea/
+*.swp
+
